curl 및 lazy_static 의존성 추가, Discord 봇 관리 및 Gemini 클라이언트 구현, 로깅 기능 추가

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ sea-orm = "*"
 dotenv = "*"
 tokio = { version = "*", features = ["full"] }
 tokio-postgres = "*"
+curl = "0.4.47"
+lazy_static = "1.5.0"
