--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ tokio = { version = "*", features = ["full"] }
 tokio-postgres = "*"
 curl = "0.4.47"
 lazy_static = "1.5.0"
+sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "postgres"] }
+
