--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,6 @@ tokio-postgres = "*"
 curl = "0.4.47"
 lazy_static = "1.5.0"
 sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "postgres"] }
+reqwest = "0.12.15"
+serde_json = "1.0.140"
 
