--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
     image: postgres:latest
     container_name: rin_postgres
     environment:
-      POSTGRES_USER: yourusername
-      POSTGRES_PASSWORD: yourpassword
-      POSTGRES_DB: yourdatabase
+      POSTGRES_USER: user_name
+      POSTGRES_PASSWORD: supersecretpassword
+      POSTGRES_DB: rin_agent_db
     ports:
       - "5432:5432"
     volumes:
