프로젝트 구조 변경 및 데이터베이스 마이그레이션 기능 추가: Cargo.toml 및 docker-compose.yml 수정, 새로운 entity 및 migration 모듈 생성, 기존 ai_context 및 discord_guilds 엔티티 삭제

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,19 @@ name = "rin_agent"
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+members = [
+    "entity",
+    "migration",
+    ".", # This is the main crate
+]
+
 [dependencies]
 serenity = "*" # Removed due to conflict with openssl-sys
 rocket = "*"
-sea-orm = "*"
+sea-orm = { version = "*", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
+migration = { path = "migration" } # depends on your needs
+entity = { path = "entity" }
 dotenv = "*"
 tokio = { version = "*", features = ["full"] }
 tokio-postgres = "*"
