--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   rin_redis:
     image: redis:latest
@@ -7,12 +5,12 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - redis_data:/data
+      - rin_redis_data:/data
     restart: always
     networks:
       - app_network
   rin_postgres:
-    image: postgres:latest
+    image: postgres:17
     container_name: rin_postgres
     environment:
       POSTGRES_USER: user_name
@@ -21,7 +19,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - pg_data:/var/lib/postgresql/data
+      - rin_pg_data:/var/lib/postgresql/data
     restart: always
     networks:
       - app_network
@@ -43,8 +41,8 @@ services:
   #   restart: always
 
 volumes:
-  redis_data: 
-  pg_data:
+  rin_redis_data: 
+  rin_pg_data: 
 
 networks:
   app_network:
