환경 변수 파일 업데이트 및 API 라우터 추가: DATABASE_URL, ROCKET_LOG_LEVEL, ROCKET_TEMP_DIR 추가, 불필요한 마이그레이션 파일 삭제, Discord 봇 관리 기능 개선

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,7 @@ GEMINI_KEY=""
 DISCORD_TOKEN=""
 DISCORD_CLIENT_ID=""
 DATABASE_URL=""
+
+# level = "debug"  # Or "normal", "critical", or "off"
+ROCKET_LOG_LEVEL="normal"
+ROCKET_TEMP_DIR="/tmp/rocket" 
