환경 변수 파일에 ROCKET_PORT 추가 및 Cargo.toml에 duckdb 의존성 추가, Discord 봇 명령어 등록 방식 개선

--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,11 @@ DISCORD_TOKEN=""
 DISCORD_CLIENT_ID=""
 DATABASE_URL=""
 
+
+# ROCKET은 아래를 참고해, ROCKET_ prefix를 붙인 환경변수를 사용합니다.
+# https://rocket.rs/guide/v0.5/configuration/#overview
+
 # level = "debug"  # Or "normal", "critical", or "off"
 ROCKET_LOG_LEVEL="normal"
 ROCKET_TEMP_DIR="/tmp/rocket" 
+ROCKET_PORT="8000"
