--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,4 +28,5 @@ lazy_static = "1.5.0"
 sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "postgres"] }
 reqwest = "0.12.15"
 serde_json = "1.0.140"
+duckdb = { version = "1.2.2", features = ["bundled"] }
 
