--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,4 +29,5 @@ sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "postgres"] 
 reqwest = "0.12.15"
 serde_json = "1.0.140"
 duckdb = { version = "1.2.2", features = ["bundled"] }
+libduckdb-sys = "1.2.2"
 
