--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,7 @@ GEMINI_API_KEY=""
 DISCORD_TOKEN=""
 DISCORD_CLIENT_ID=""
 DATABASE_URL=""
+MANAGER_ID=0
 
 
 # ROCKET은 아래를 참고해, ROCKET_ prefix를 붙인 환경변수를 사용합니다.
