--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,4 @@ sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "postgres"] 
 reqwest = "0.12.15"
 serde_json = "1.0.140"
 base64 = "0.22.1"
+libc = "0.2.172"
