환경 변수 및 의존성 추가: Redis 드라이버 구현 및 관련 설정 추가

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,13 @@
 GEMINI_API_KEY=""
 DISCORD_TOKEN=""
 DISCORD_CLIENT_ID=""
+
+# 관계형 DB에 대한 설정
 DATABASE_URL=""
 MANAGER_ID=0
 
+# Redis에 대한 설정
+REDIS_URL=""
 
 # ROCKET은 아래를 참고해, ROCKET_ prefix를 붙인 환경변수를 사용합니다.
 # https://rocket.rs/guide/v0.5/configuration/#overview
