--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,5 @@ reqwest = "0.12.15"
 serde_json = "1.0.140"
 base64 = "0.22.1"
 libc = "0.2.172"
+redis = { version = "0.31.0", features = ["tokio-comp","r2d2"] }
+r2d2 = "0.8.10"
