기능 개선: 알람 설정 및 디스코드 응답 처리 로직 수정, 입력 타입 및 설명 추가

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [workspace]
 members = [
     "entity",
-    # "migration",
+    "migration",
     ".", # This is the main crate
 ]
 
