--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,5 @@ base64 = "0.22.1"
 libc = "0.2.172"
 redis = { version = "0.31.0", features = ["tokio-comp","r2d2"] }
 r2d2 = "0.8.10"
+tokio-tungstenite = "0.26.2"
+serde = "1.0.219"
