--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,4 @@ redis = { version = "0.31.0", features = ["tokio-comp","r2d2"] }
 r2d2 = "0.8.10"
 tokio-tungstenite = "0.26.2"
 serde = "1.0.219"
+futures-util = "0.3.31"
