--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ base64 = "0.22.1"
 libc = "0.2.172"
 redis = { version = "0.31.0", features = ["tokio-comp","r2d2"] }
 r2d2 = "0.8.10"
-tokio-tungstenite = { version ="0.26.2", features = ["tls"] }
+tokio-tungstenite = { version ="0.26.2", features = ["rustls-tls-webpki-roots"] }
 serde = "1.0.219"
 futures-util = "0.3.31"
 serde-protobuf = "0.8.2"
