Refactor Gemini Socket Management and Live API Integration
- Removed the old socket manager implementation and replaced it with a new structure in the gemini_live_api module.
- Introduced a new `GeminiSocketClient` and `GeminiSocketManager` for handling WebSocket connections.
- Updated imports across the codebase to reflect the new module structure.
- Added comprehensive logging functionality for connection attempts and errors.
- Created a new `gemini_live_api` crate with necessary dependencies and modules for live API interactions.
- Defined various types and enums for handling live API requests and responses, including message structures and configuration settings.
- Enhanced the `GeminiGenerationConfig` and related types to support new features and configurations.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 members = [
     "entity",
     "migration",
+    "gemini_live_api",
     ".", # This is the main crate
 ]
 
@@ -22,6 +23,7 @@ rocket = "*"
 sea-orm = { version = "*", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
 # migration = { path = "migration" } # depends on your needs
 entity = { path = "entity" }
+gemini_live_api= { path = "gemini_live_api" }
 dotenv = "*"
 tokio = { version = "*", features = ["full"] }
 tokio-postgres = "*"
