기능 추가: Google Search API 설정을 .env.sample에 추가

--- a/.env.sample
+++ b/.env.sample
@@ -9,6 +9,10 @@ MANAGER_ID=0
 # Redis에 대한 설정
 REDIS_URL=""
 
+# Google Search API에 대한 설정
+GOOGLE_SEARCH_TOKEN=""
+GOOGLE_SEARCH_CX=""
+
 # ROCKET은 아래를 참고해, ROCKET_ prefix를 붙인 환경변수를 사용합니다.
 # https://rocket.rs/guide/v0.5/configuration/#overview
 
