--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ tokio = { version = "*", features = ["full"] }
 tokio-postgres = "*"
 curl = "0.4.47"
 lazy_static = "1.5.0"
-sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "postgres"] }
+sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"] }
 reqwest = "0.12.15"
 serde_json = "1.0.140"
 base64 = "0.22.1"
@@ -40,3 +40,5 @@ tokio-tungstenite = { version ="0.26.2", features = ["rustls-tls-webpki-roots"] 
 serde = "1.0.219"
 futures-util = "0.3.31"
 serde-protobuf = "0.8.2"
+rs_ervice = {version = "0.1.2" , features=["tokio"] }
+time-macros = "0.2.22"
