--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ path = "src/main.rs"
 [dependencies]
 serenity = "*" # Removed due to conflict with openssl-sys
 rocket = "*"
-sea-orm = { version = "*", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
+sea-orm = { version = "1.1.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
 # migration = { path = "migration" } # depends on your needs
 entity = { path = "entity" }
 gemini_live_api= { path = "gemini_live_api" }
@@ -30,15 +30,15 @@ tokio-postgres = "*"
 curl = "0.4.47"
 lazy_static = "1.5.0"
 sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"] }
-reqwest = "0.12.15"
+reqwest = "0.12.18"
 serde_json = "1.0.140"
+serde ={ version = "1.0.219", features = ["derive"] }
 base64 = "0.22.1"
 libc = "0.2.172"
 redis = { version = "0.31.0", features = ["tokio-comp","r2d2"] }
 r2d2 = "0.8.10"
 tokio-tungstenite = { version ="0.26.2", features = ["rustls-tls-webpki-roots"] }
-serde = "1.0.219"
 futures-util = "0.3.31"
 serde-protobuf = "0.8.2"
-rs_ervice = {version = "0.1.4" , features=["tokio"] }
+rs_ervice = {version = "0.1.6" , features=["tokio"] }
 time-macros = "0.2.22"
