--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,4 @@ futures-util = "0.3.31"
 serde-protobuf = "0.8.2"
 rs_ervice = {version = "0.1.6" , features=["tokio"] }
 time-macros = "0.2.22"
+chrono = "0.4.41"
