--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ path = "src/main.rs"
 
 
 [dependencies]
-serenity = "*" # Removed due to conflict with openssl-sys
+serenity = { version = "*", features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"]}
 rocket = "*"
 sea-orm = { version = "1.1.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
 # migration = { path = "migration" } # depends on your needs
@@ -43,3 +43,4 @@ serde-protobuf = "0.8.2"
 rs_ervice = {version = "0.1.6" , features=["tokio"] }
 time-macros = "0.2.22"
 chrono = "0.4.41"
+futures = "0.3.31"
