feat: add new chunks and entry files for improved app structure
- Introduced new JavaScript chunks: DEPBGi75.js and DvBLC2Y4.js for modular functionality.
- Created entry files: app.Do177xrL.js and start.BzLTp-QI.js to enhance application initialization.
- Implemented node files: 0.Dfyt_GD3.js, 1.BJcWfSWZ.js, and 2.csvKS_w0.js for better routing and component management.
- Updated version.json to reflect the latest build version.
- Added robots.txt to allow crawling of the entire site.
- Introduced message_channel.rs for potential messaging functionality.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,3 +47,5 @@ futures = "0.3.31"
 songbird = { version = "0.5.0", features = ["serenity"] }
 bytes = "1.10.1"
 dashmap = "6.1.0"
+fred = "10.1.0"
+rumqttc = "0.25.1"
