--- a/rin_agent/Cargo.toml
+++ b/rin_agent/Cargo.toml
@@ -11,7 +11,7 @@ path = "src/main.rs"
 
 [dependencies]
 serenity = { version = "*", features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"]}
-rocket = "*"
+rocket = { version = "*", features = ["tls", "json"] }
 sea-orm = { version = "1.1.12", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
 # migration = { path = "../migration" } # depends on your needs
 entity = { path = "../entity" }
@@ -22,12 +22,12 @@ tokio-postgres = "*"
 curl = "0.4.49"
 lazy_static = "1.5.0"
 sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"] }
-reqwest = "0.12.23"
+reqwest = "0.13.1"
 serde_json = "1.0.143"
 serde ={ version = "1.0.219", features = ["derive"] }
 base64 = "0.22.1"
 libc = "0.2.175"
-redis = { version = "0.32.5", features = ["tokio-comp","r2d2"] }
+redis = { version = "1.0.2", features = ["tokio-comp","r2d2"] }
 r2d2 = "0.8.10"
 tokio-tungstenite = { version ="0.28.0", features = ["native-tls"] }
 futures-util = "0.3.31"
