feat: 여러 패키지 추가 및 의존성 업데이트, 서버 PID 검색 기능 구현

--- a/rin_agent/Cargo.toml
+++ b/rin_agent/Cargo.toml
@@ -40,6 +40,5 @@ songbird = { version = "0.5.0", features = ["serenity"] }
 bytes = "1.10.1"
 dashmap = "6.1.0"
 fred = "10.1.0"
-rumqttc = "0.25.1"
-
+gemini-rust = "1.6.0"
 
