--- a/manager/Cargo.toml
+++ b/manager/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-entity = { path = "../entity" }
-tokio = { version = "1.43.0", features = ["full"] }
+tokio = { version = "*", features = ["full"] }
+redis = { version = "1.0.2", features = ["tokio-comp","r2d2"] }
+r2d2 = "0.8.10"
+rumqttc = "0.25.1"
+sysinfo = "0.37.2"
