feat: hyper-tls 패키지 추가 및 의존성 수정, 서버 PID 검색 로직 개선, 등록 데이터 구조체 공개

--- a/rin_agent/Cargo.toml
+++ b/rin_agent/Cargo.toml
@@ -10,7 +10,7 @@ path = "src/main.rs"
 
 
 [dependencies]
-serenity = { version = "*", features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"]}
+serenity = { version = "*", features = ["cache", "framework", "standard_framework", "voice", "http", "native_tls_backend"]}
 rocket = { version = "*", features = ["tls", "json"] }
 sea-orm = { version = "1.1.19", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
 # migration = { path = "../migration" } # depends on your needs
