feat: manager_cli 패키지 추가 및 Redis 통신 기능 구현

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,10 @@ members = [
     "rin_agent",
     "rin_agent/gemini_live_api",
     "manager",
+    "manager_cli",
     "entity",
     "migration",
+    "contract",
 ]
 
 [profile.dev.package.audiopus_sys]
