--- a/manager_cli/Cargo.toml
+++ b/manager_cli/Cargo.toml
@@ -12,3 +12,6 @@ chrono = "0.4"
 contract = { path = "../contract" }
 colored = "3.0.0"
 futures-util = "0.3.31"
+ratatui = "0.30"   # TUI 프레임워크
+crossterm = "0.29.0" # 터미널 제어 (키 입력, 커서 이동)
+anyhow = "1.0"     # 에러 처리
